worked on card popups, choose cards popup, removed duplicate entry cards

--- a/index.html
+++ b/index.html
@@ -41,22 +41,22 @@
             <div class="suspectCard" data-card="">
                 <p class="mainName">Suspect</p>
                 <div class="optsuspect" data-card="Colonel Mustard">
-                    <img src="assets/cards/yellow-plum.jpg">
-                    <p>Colonel Mustard</p>
+                    <img src="assets/cards/yellow-plum.jpg" class="ddddddddd">
+                    <p>Choose</p>
                 </div>
             </div>
             <div class="weaponCard" data-card="">
                 <p class="mainName">Weapon</p>
                 <div class="optweapon" data-card="Knife">
                     <img src="assets/cards/yellow-plum.jpg">
-                    <p>Knife</p>
+                    <p>Choose</p>
                 </div>
             </div>
             <div class="roomCard" data-card="">
                 <p class="mainName">Room</p>
                 <div class="optroom" data-card="Hall">
                     <img src="assets/cards/yellow-plum.jpg">
-                    <p>Hall</p>
+                    <p>Choose</p>
                 </div>
             </div>
         </div>
@@ -65,6 +65,21 @@
         </div>
         <p class="closme">Close</p>
         <!-- <button class="submit closebtns">Done</button> -->
+    </div>
+    <div class="popupSuspectChoose chooseCardsOn showbox">
+        <p>Choose Suspect</p>
+        <div class="cardsList">
+        </div>
+    </div>
+    <div class="popupWeaponChoose chooseCardsOn showbox">
+        <p>Choose Weapon</p>
+        <div class="cardsList">
+        </div>
+    </div>
+    <div class="popupRoomChoose chooseCardsOn showbox">
+        <p>Choose Room</p>
+        <div class="cardsList">
+        </div>
     </div>
 
     <script src="script.js"></script>
