added images for all cards

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
                     <option value="6">6 Players</option>
                 </select>
                 <div id="playersInputs">
-                    <input type="text" name="player1" placeholder="Player 1 Name" value="nagender" required>
-                    <input type="text" name="player2" placeholder="Player 2 Name" value="chintu" required>
+                    <input type="text" name="player1" placeholder="Player 1 Name" value="" required>
+                    <input type="text" name="player2" placeholder="Player 2 Name" value="" required>
                 </div>
                 <button type="submit" class="btn btn-primary mt-2">Start Game</button>
             </form>
@@ -41,21 +41,21 @@
             <div class="suspectCard" data-card="">
                 <p class="mainName">Suspect</p>
                 <div class="optsuspect" data-card="Colonel Mustard">
-                    <img src="assets/cards/yellow-plum.jpg" class="ddddddddd">
+                    <img src="assets/cards/choose.png">
                     <p>Choose</p>
                 </div>
             </div>
             <div class="weaponCard" data-card="">
                 <p class="mainName">Weapon</p>
                 <div class="optweapon" data-card="Knife">
-                    <img src="assets/cards/yellow-plum.jpg">
+                    <img src="assets/cards/choose.png">
                     <p>Choose</p>
                 </div>
             </div>
             <div class="roomCard" data-card="">
                 <p class="mainName">Room</p>
                 <div class="optroom" data-card="Hall">
-                    <img src="assets/cards/yellow-plum.jpg">
+                    <img src="assets/cards/choose.png">
                     <p>Choose</p>
                 </div>
             </div>
